--- a/VizSharp.Algorithms/VizSharp.Algorithms.csproj
+++ b/VizSharp.Algorithms/VizSharp.Algorithms.csproj
@@ -34,7 +34,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BubbleSortAlgorithm.cs" />
+    <Compile Include="InsertionSortAlgorithm.cs" />
+    <Compile Include="IInPlaceAlgorithm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuicksortAlgorithm.cs" />
+    <Compile Include="SelectionSortAlgorithm.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Collections.Immutable">
@@ -43,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VizSharp.Utilities\VizSharp.Utilities.csproj">
+      <Project>{20d2b1f7-1711-4e0e-9109-698ec1258d62}</Project>
+      <Name>VizSharp.Utilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
